@@ -1,3 +1,4 @@
+- always display the right package name on errors (mga#15032)
 - don't give a wrong package name when it is unknown in a callback (mga#15032)
 
 Version 8.03 - 1 January 2015
